--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "live",
+  "name": "Coran Live 24/7",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "bash start.sh & node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.17.0"
   }
 }
