--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "bash start.sh & node server.js"
+    "start": "bash start.sh"
   },
   "dependencies": {
     "express": "^4.18.2",
